--- a/Udemy_project.ipynb
+++ b/Udemy_project.ipynb
@@ -2,6 +2,340 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# makes sure charts appear in the notebook rather than a popup window\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>course_id</th>\n",
+       "      <th>course_title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>price</th>\n",
+       "      <th>num_subscribers</th>\n",
+       "      <th>num_reviews</th>\n",
+       "      <th>num_lectures</th>\n",
+       "      <th>level</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>content_duration</th>\n",
+       "      <th>published_timestamp</th>\n",
+       "      <th>subject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>49798.0</td>\n",
+       "      <td>Bitcoin or How I Learned to Stop Worrying and ...</td>\n",
+       "      <td>https://www.udemy.com/bitcoin-or-how-i-learned...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>65576.0</td>\n",
+       "      <td>936.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>All Levels</td>\n",
+       "      <td>0.560000</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2013-04-20T02:25:22Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>48841.0</td>\n",
+       "      <td>Accounting in 60 Minutes - A Brief Introduction</td>\n",
+       "      <td>https://www.udemy.com/accounting-in-60-minutes...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>56659.0</td>\n",
+       "      <td>4397.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Beginner Level</td>\n",
+       "      <td>0.950000</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2013-04-07T21:39:25Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>133536.0</td>\n",
+       "      <td>Stock Market Investing for Beginners</td>\n",
+       "      <td>https://www.udemy.com/the-beginners-guide-to-t...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50855.0</td>\n",
+       "      <td>2698.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>All Levels</td>\n",
+       "      <td>0.910000</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2013-12-25T19:53:34Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>151668.0</td>\n",
+       "      <td>Introduction to Financial Modeling</td>\n",
+       "      <td>https://www.udemy.com/financial-modeling-asimp...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>29167.0</td>\n",
+       "      <td>1463.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>All Levels</td>\n",
+       "      <td>0.180000</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2014-05-27T16:22:16Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>648826.0</td>\n",
+       "      <td>The Complete Financial Analyst Course 2017</td>\n",
+       "      <td>https://www.udemy.com/the-complete-financial-a...</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>24481.0</td>\n",
+       "      <td>2347.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>All Levels</td>\n",
+       "      <td>0.370000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2016-01-21T01:38:48Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1187</th>\n",
+       "      <td>1231958.0</td>\n",
+       "      <td>60 Minutes to Fundamental Accounting Skills</td>\n",
+       "      <td>https://www.udemy.com/60-minute-fundamental-ac...</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>All Levels</td>\n",
+       "      <td>0.950000</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2017-06-28T21:55:29Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1188</th>\n",
+       "      <td>1057040.0</td>\n",
+       "      <td>Teeter-Totter Accounting</td>\n",
+       "      <td>https://www.udemy.com/teeter-totter-accounting/</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Intermediate Level</td>\n",
+       "      <td>0.360000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2017-02-08T22:15:56Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1189</th>\n",
+       "      <td>1258666.0</td>\n",
+       "      <td>Financial Statement Auditing Cycles</td>\n",
+       "      <td>https://www.udemy.com/financial-statement-audi...</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>All Levels</td>\n",
+       "      <td>0.150000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2017-06-29T23:20:10Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1190</th>\n",
+       "      <td>1232282.0</td>\n",
+       "      <td>The Cash Flow Statement - An Introduction</td>\n",
+       "      <td>https://www.udemy.com/cash-flow-statement-intr...</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>All Levels</td>\n",
+       "      <td>0.180000</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2017-06-28T16:05:51Z</td>\n",
+       "      <td>Business Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1191</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.690353</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1192 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      course_id                                       course_title  \\\n",
+       "0       49798.0  Bitcoin or How I Learned to Stop Worrying and ...   \n",
+       "1       48841.0    Accounting in 60 Minutes - A Brief Introduction   \n",
+       "2      133536.0               Stock Market Investing for Beginners   \n",
+       "3      151668.0                 Introduction to Financial Modeling   \n",
+       "4      648826.0         The Complete Financial Analyst Course 2017   \n",
+       "...         ...                                                ...   \n",
+       "1187  1231958.0        60 Minutes to Fundamental Accounting Skills   \n",
+       "1188  1057040.0                           Teeter-Totter Accounting   \n",
+       "1189  1258666.0                Financial Statement Auditing Cycles   \n",
+       "1190  1232282.0          The Cash Flow Statement - An Introduction   \n",
+       "1191        NaN                                                NaN   \n",
+       "\n",
+       "                                                    url  price  \\\n",
+       "0     https://www.udemy.com/bitcoin-or-how-i-learned...    0.0   \n",
+       "1     https://www.udemy.com/accounting-in-60-minutes...    0.0   \n",
+       "2     https://www.udemy.com/the-beginners-guide-to-t...    0.0   \n",
+       "3     https://www.udemy.com/financial-modeling-asimp...    0.0   \n",
+       "4     https://www.udemy.com/the-complete-financial-a...  195.0   \n",
+       "...                                                 ...    ...   \n",
+       "1187  https://www.udemy.com/60-minute-fundamental-ac...   75.0   \n",
+       "1188    https://www.udemy.com/teeter-totter-accounting/   90.0   \n",
+       "1189  https://www.udemy.com/financial-statement-audi...   50.0   \n",
+       "1190  https://www.udemy.com/cash-flow-statement-intr...   50.0   \n",
+       "1191                                                NaN    NaN   \n",
+       "\n",
+       "      num_subscribers  num_reviews  num_lectures               level  \\\n",
+       "0             65576.0        936.0          24.0          All Levels   \n",
+       "1             56659.0       4397.0          16.0      Beginner Level   \n",
+       "2             50855.0       2698.0          15.0          All Levels   \n",
+       "3             29167.0       1463.0           8.0          All Levels   \n",
+       "4             24481.0       2347.0         174.0          All Levels   \n",
+       "...               ...          ...           ...                 ...   \n",
+       "1187              0.0          0.0           9.0          All Levels   \n",
+       "1188              0.0          0.0          12.0  Intermediate Level   \n",
+       "1189              0.0          0.0           9.0          All Levels   \n",
+       "1190              0.0          0.0          10.0          All Levels   \n",
+       "1191              NaN          NaN           NaN                 NaN   \n",
+       "\n",
+       "        Rating  content_duration   published_timestamp           subject  \n",
+       "0     0.560000               8.0  2013-04-20T02:25:22Z  Business Finance  \n",
+       "1     0.950000               1.5  2013-04-07T21:39:25Z  Business Finance  \n",
+       "2     0.910000               1.5  2013-12-25T19:53:34Z  Business Finance  \n",
+       "3     0.180000               1.5  2014-05-27T16:22:16Z  Business Finance  \n",
+       "4     0.370000              10.0  2016-01-21T01:38:48Z  Business Finance  \n",
+       "...        ...               ...                   ...               ...  \n",
+       "1187  0.950000               2.5  2017-06-28T21:55:29Z  Business Finance  \n",
+       "1188  0.360000               1.0  2017-02-08T22:15:56Z  Business Finance  \n",
+       "1189  0.150000               2.0  2017-06-29T23:20:10Z  Business Finance  \n",
+       "1190  0.180000               1.5  2017-06-28T16:05:51Z  Business Finance  \n",
+       "1191  0.690353               NaN                   NaN               NaN  \n",
+       "\n",
+       "[1192 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Import csv file\n",
+    "\n",
+    "ud = pd.read_csv(\"3.1-data-sheet-udemy-courses-business-courses.csv\")\n",
+    "ud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1192 entries, 0 to 1191\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   course_id            1191 non-null   float64\n",
+      " 1   course_title         1191 non-null   object \n",
+      " 2   url                  1191 non-null   object \n",
+      " 3   price                1191 non-null   float64\n",
+      " 4   num_subscribers      1191 non-null   float64\n",
+      " 5   num_reviews          1191 non-null   float64\n",
+      " 6   num_lectures         1191 non-null   float64\n",
+      " 7   level                1191 non-null   object \n",
+      " 8   Rating               1192 non-null   float64\n",
+      " 9   content_duration     1191 non-null   float64\n",
+      " 10  published_timestamp  1191 non-null   object \n",
+      " 11  subject              1191 non-null   object \n",
+      "dtypes: float64(7), object(5)\n",
+      "memory usage: 111.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check the data types\n",
+    "\n",
+    "ud.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +343,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
